--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
     <meta property="og:image" content="/images/sunlight.jpg">
   </head>
   <body>
-    <h1>Haikus for Mona</h1>
+    <h1>Haikus for Sigcino Sizwe Ngcobo</h1>
+    <h5 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Testing Code Spaces</h5>
     <div>
       <% for(var i=0; i < haikus.length; i++) { %>
         <img
